# LLM

./: .gitignore  01_LLM_exercise.ipynb  02_STT_TTS.ipynb  03_ollama.ipynb  04_huggingface_datasets.ipynb  05_huggingface_models.ipynb  06_huggingface_fintuing.ipynb  README.md  main.py  pyproject.toml  test.json
gguf_test/: Modelfile
