[project]
name = "llmproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.47.0",
    "datasets>=4.0.0",
    "ipython>=8.37.0",
    "jupyter>=1.1.1",
    "ollama>=0.5.3",
    "openai>=1.107.0",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "speechrecognition>=3.14.3",
    "transformers>=4.56.1",
    "trl>=0.23.0",
]
